--- a/translations/English.yml
+++ b/translations/English.yml
@@ -1,7 +1,7 @@
 BetterTrollSummon_none: "none"
-BetterTrollSummon_msg_FriendlyTroll_Fail: "The troll despises you, you mean nothing to it."
-BetterTrollSummon_msg_FriendlyTroll_Success: "The troll has acknowledged you as its master."
-BetterTrollSummon_tip_FriendlyTroll_Chance: "{0} chance to summon a friendly troll"
+BetterTrollSummon_msg_FriendlyTroll_Fail: "The troll scorns you; you mean nothing to it."
+BetterTrollSummon_msg_FriendlyTroll_Success: "The troll acknowledges you as its master."
+BetterTrollSummon_tip_FriendlyTroll_Chance: "{0} chance to summon a friendly troll."
 BetterTrollSummon_tip_Troll_Level: "A troll of level {0} will be summoned."
 BetterTrollSummon_tip_Troll_Count: "You can summon up to {0} trolls."
-BetterTrollSummon_msg_MaxSpawned: ""
+BetterTrollSummon_msg_MaxSpawned: "You cannot control any more trolls."
