--- a/translations/Russian.yml
+++ b/translations/Russian.yml
@@ -1,7 +1,7 @@
 BetterTrollSummon_none: "none"
-BetterTrollSummon_msg_FriendlyTroll_Fail: "The troll scorns you; you mean nothing to it."
-BetterTrollSummon_msg_FriendlyTroll_Success: "The troll acknowledges you as its master."
-BetterTrollSummon_tip_FriendlyTroll_Chance: "{0} chance to summon a friendly troll."
-BetterTrollSummon_tip_Troll_Level: "A troll of level {0} will be summoned."
-BetterTrollSummon_tip_Troll_Count: "You can summon up to {0} trolls."
-BetterTrollSummon_msg_MaxSpawned: "You cannot control any more trolls."
+BetterTrollSummon_msg_FriendlyTroll_Fail: "Тролль презирает вас, вы для него ничто"
+BetterTrollSummon_msg_FriendlyTroll_Success: "Тролль признает вас своим хозяином"
+BetterTrollSummon_tip_FriendlyTroll_Chance: "Шанс {0} призвать дружелюбного тролля"
+BetterTrollSummon_tip_Troll_Level: "Будет призван тролль {0}-го уровня"
+BetterTrollSummon_tip_Troll_Count: "Вы можете призвать до {0} троллей"
+BetterTrollSummon_msg_MaxSpawned: "Вы не можете контролировать больше троллей"
